syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

message DeploymentConfig {
  Schedule schedule = 1;
}

// Schedule is the message for deployment schedule.
message Schedule {
  repeated ScheduleDeployment deployments = 1;
}

message ScheduleDeployment {
  // The title of the deployment (stage) in a schedule.
  string title = 1;
  string id = 2;
  DeploymentSpec spec = 3;
}

message DeploymentSpec {
  LabelSelector selector = 1;
}

message LabelSelector {
  // match_expressions is a list of label selector requirements. The requirements are ANDed.
  repeated LabelSelectorRequirement match_expressions = 1;
}

message LabelSelectorRequirement {
  string key = 1;
  OperatorType operator = 2;
  // Values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty. This array is replaced during a strategic merge patch.
  repeated string values = 3;
  enum OperatorType {
    // The operator is not specified.
    OPERATOR_TYPE_UNSPECIFIED = 0;
    // The operator is "In".
    IN = 1;
    // The operator is "Exists".
    EXISTS = 2;
    // The operator is "Not In".
    NOT_IN = 3;
  }
}
